--- a/kadai/gacha/css/reset.css
+++ b/kadai/gacha/css/reset.css
@@ -1,39 +1,30 @@
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-text-size-adjust: 100%;
 }
-
 *,
 :after,
 :before {
   background-repeat: no-repeat;
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
-
 :after,
 :before {
   text-decoration: inherit;
   vertical-align: inherit;
 }
-
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 audio:not([controls]) {
   display: none;
   height: 0;
 }
-
 hr {
   overflow: visible;
 }
-
 article,
 aside,
 details,
@@ -48,56 +39,45 @@ section,
 summary {
   display: block;
 }
-
 summary {
   display: list-item;
 }
-
 small {
   font-size: 80%;
 }
-
 [hidden],
 template {
   display: none;
 }
-
 abbr[title] {
   border-bottom: 1px dotted;
   text-decoration: none;
 }
-
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
-
 a:active,
 a:hover {
   outline-width: 0;
 }
-
 code,
 kbd,
 pre,
 samp {
   font-family: monospace, monospace;
 }
-
 b,
 strong {
   font-weight: bolder;
 }
-
 dfn {
   font-style: italic;
 }
-
 mark {
   background-color: #ff0;
   color: #000;
 }
-
 sub,
 sup {
   font-size: 75%;
@@ -105,45 +85,36 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
-
 sub {
   bottom: -0.25em;
 }
-
 sup {
   top: -0.5em;
 }
-
 input {
   border-radius: 0;
 }
-
-[role=button],
-[type=button],
-[type=reset],
-[type=submit],
+[role="button"],
+[type="button"],
+[type="reset"],
+[type="submit"],
 button {
   cursor: pointer;
 }
-
 [disabled] {
   cursor: default;
 }
-
-[type=number] {
+[type="number"] {
   width: auto;
 }
-
-[type=search][type=search]::-webkit-search-cancel-button,
-[type=search]::-webkit-search-decoration {
+[type="search"][type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-
 textarea {
   overflow: auto;
   resize: vertical;
 }
-
 button,
 input,
 optgroup,
@@ -151,38 +122,32 @@ select,
 textarea {
   font: inherit;
 }
-
 optgroup {
   font-weight: 700;
 }
-
 button {
   overflow: visible;
 }
-
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner,
 button::-moz-focus-inner {
   border-style: 0;
   padding: 0;
 }
-
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner,
 button:-moz-focusring {
   outline: 1px dotted;
 }
-
-[type=reset],
-[type=submit],
+[type="reset"],
+[type="submit"],
 button,
-html [type=button] button,
+html [type="button"]button,
 select {
   text-transform: none;
 }
-
 button,
 input,
 select,
@@ -191,15 +156,12 @@ textarea {
   border-style: none;
   color: inherit;
 }
-
 select::-ms-expand {
   display: none;
 }
-
 select::-ms-value {
   color: currentColor;
 }
-
 legend {
   border: 0;
   color: inherit;
@@ -207,184 +169,62 @@ legend {
   max-width: 100%;
   white-space: normal;
 }
-
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font: inherit;
 }
-
-[type=search] img {
+[type="search"]img {
   border-style: none;
   vertical-align: bottom;
 }
-
 progress {
   vertical-align: baseline;
 }
-
 svg:not(:root) {
   overflow: hidden;
 }
-
 audio,
 canvas,
 progress,
 video {
   display: inline-block;
 }
-
 @media screen {
-  [hidden~=screen] {
+  [hidden~="screen"] {
     display: inherit;
   }
-  [hidden~=screen]:not(:active):not(:focus):not(:target) {
+  [hidden~="screen"]:not(:active):not(:focus):not(:target) {
     position: absolute !important;
     clip: rect(0 0 0 0) !important;
   }
 }
-[aria-busy=true] {
+[aria-busy="true"] {
   cursor: progress;
 }
-
 [aria-controls] {
   cursor: pointer;
 }
-
 [aria-disabled] {
   cursor: default;
 }
-
 ::-moz-selection {
   background-color: #b3d4fc;
   color: #000;
   text-shadow: none;
 }
-
 ::selection {
   background-color: #b3d4fc;
   color: #000;
   text-shadow: none;
 }
-
 ul,
 ol {
   list-style: none;
 }
-
 a {
   text-decoration: none;
 }
-
 img {
   max-width: 100%;
   vertical-align: bottom;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-header {
-  width: 25%;
-  height: 100vh;
-  background-color: #f0ffe4;
-  position: sticky;
-  top: 0;
-  padding: 20px;
-}
-header h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-  text-align: center;
-}
-header p {
-  margin-bottom: 20px;
-}
-
-#g-nav {
-  padding: 20px;
-}
-#g-nav li {
-  margin-bottom: 20px;
-}
-#g-nav li.current a {
-  background-color: #333;
-  color: #fff;
-}
-#g-nav a {
-  color: #333;
-  padding: 4px 10px;
-}
-
-main {
-  width: 75%;
-  background-color: #fff0e5;
-}
-
-.kadai-section {
-  min-height: 100vh;
-  padding: 80px 20px;
-}
-.kadai-section h2 {
-  text-align: center;
-  font-size: 32px;
-  margin-bottom: 50px;
-}
-.kadai-section h2::after {
-  display: block;
-  font-size: 20px;
-  content: attr(data-en);
-  font-weight: normal;
-}
-
-.kadai-list {
-  padding: 50px 0 50px 50px;
-}
-.kadai-list li {
-  margin-bottom: 20px;
-}
-.kadai-list li a {
-  color: #333;
-}
-.kadai-list li a:hover {
-  text-decoration: underline;
-}
-
-.main-visual {
-  width: 100%;
-  height: 80vh;
-}
-.main-visual img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 50% 100%;
-     object-position: 50% 100%;
-  width: 100%;
-  height: 100%;
-}
-
-.main-copy {
-  padding: 50px 20px;
-  text-align: center;
-}
-.main-copy h2 {
-  margin-bottom: 20px;
-}
-
-.lead {
-  max-width: 600px;
-  font-size: 18px;
-  margin: 0 auto 50px;
-}
-
-.free {
-  width: 100%;
-  height: 100vh;
-  background-color: #cbffe5;
 }
