--- a/kadai/css/style.css
+++ b/kadai/css/style.css
@@ -342,9 +342,15 @@ main {
   content: attr(data-en);
   font-weight: normal;
 }
+.kadai-section p {
+  max-width: 680px;
+  margin: 0 auto;
+  line-height: 2;
+}
 
 .kadai-list {
   padding: 50px 0 50px 50px;
+  list-style: disc;
 }
 .kadai-list li {
   margin-bottom: 20px;
@@ -372,9 +378,9 @@ main {
 
 .main-copy {
   padding: 50px 20px;
-  text-align: center;
 }
 .main-copy h2 {
+  text-align: center;
   margin-bottom: 20px;
 }
 
@@ -382,6 +388,7 @@ main {
   max-width: 600px;
   font-size: 18px;
   margin: 0 auto 50px;
+  line-height: 2;
 }
 
 .free {
