--- a/kadai/scss/style.scss
+++ b/kadai/scss/style.scss
@@ -70,10 +70,16 @@ main {
       font-weight: normal;
     }
   }
+  p {
+    max-width: 680px;
+    margin: 0 auto;
+    line-height: 2;
+  }
 }
 
 .kadai-list {
   padding: 50px 0 50px 50px;
+  list-style: disc;
   li {
     margin-bottom: 20px;
     a {
@@ -98,9 +104,9 @@ main {
 
 .main-copy {
   padding: 50px 20px;
-  text-align: center;
 
   h2 {
+    text-align: center;
     margin-bottom: 20px;
   }
 }
@@ -108,6 +114,7 @@ main {
   max-width: 600px;
   font-size: 18px;
   margin: 0 auto 50px;
+  line-height: 2;
 }
 
 .free {
