--- a/restaurant-site-multi/css/style.css
+++ b/restaurant-site-multi/css/style.css
@@ -698,12 +698,10 @@ footer {
 }
 
 /* ------------多言語--------------------------------- */
-body {
-  padding-top: 60px;
-}
 
 #ham-btn {
-  top: 60px;
+  top: 56px;
+  background-color: #fff;
 }
 
 .lang-btn {
