--- a/kadai/scss/style.scss
+++ b/kadai/scss/style.scss
@@ -7,6 +7,10 @@ html {
 
 .container {
   display: flex;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
 }
 
 //------------------------------------------------
@@ -19,13 +23,30 @@ header {
   top: 0;
   padding: 20px;
 
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    height: 18vh;
+    padding: 20px;
+    position: static;
+  }
+
   h1 {
     font-size: 24px;
     margin-bottom: 20px;
     text-align: center;
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 10px;
+    }
   }
   p {
     margin-bottom: 20px;
+    text-align: center;
+
+    @media screen and (max-width: 767px) {
+      font-size: 12px;
+      margin-bottom: 10px;
+    }
   }
 }
 
@@ -33,6 +54,10 @@ header {
 
 #g-nav {
   padding: 20px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   li {
     margin-bottom: 20px;
     &.current {
@@ -53,6 +78,10 @@ header {
 main {
   width: 75%;
   background-color: #fff0e5;
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
 }
 
 .kadai-section {
@@ -108,6 +137,10 @@ main {
   h2 {
     text-align: center;
     margin-bottom: 20px;
+
+    @media screen and (max-width: 767px) {
+      font-size: 18px;
+    }
   }
 }
 .lead {
@@ -115,6 +148,10 @@ main {
   font-size: 18px;
   margin: 0 auto 50px;
   line-height: 2;
+
+  @media screen and (max-width: 767px) {
+    font-size: 14px;
+  }
 }
 
 .free {
