--- a/portfolio/sass/style.scss
+++ b/portfolio/sass/style.scss
@@ -68,6 +68,7 @@ canvas {
     font-size: 16px;
     a {
       color: #333;
+      font-weight: bold;
       &:hover {
         text-decoration: underline 2px solid #ff74419f;
         text-underline-offset: 5px;
