--- a/portfolio/sass/style.scss
+++ b/portfolio/sass/style.scss
@@ -382,6 +382,7 @@ canvas {
   }
 }
 .page-works {
+  margin-top: 90px;
   header {
     background-color: $color-sub;
     text-align: center;
@@ -404,6 +405,11 @@ canvas {
   .main-visual {
     max-width: 960px;
     margin: 80px auto;
+
+    @media (max-width: 768px) {
+      margin: 40px auto;
+      
+    }
   }
 
   dl {
