--- a/portfolio/sass/style.scss
+++ b/portfolio/sass/style.scss
@@ -384,7 +384,7 @@ canvas {
 .page-works {
   margin-top: 90px;
   header {
-    background-color: $color-sub;
+    background-color: #e7ceffe2;
     text-align: center;
     padding: 30px 0;
 
@@ -408,7 +408,6 @@ canvas {
 
     @media (max-width: 768px) {
       margin: 40px auto;
-      
     }
   }
 
