--- a/Vegas2/css/style.css
+++ b/Vegas2/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 .mvInner {
   position: relative;
-  color: #fff;
+  color: #f5f5f5;
   height: 100vh;
   text-shadow: #000 1px 1px 10px;
 }
@@ -22,8 +22,7 @@ body {
   left: 50px;
 }
 
-.vegas-slide-inner {
-  /* background-size: 100%; */
-  /* background-position: 50% 50%; */
-  /* height: 100vh; */
+.vegas-slide {
+  object-fit: cover;
 }
+
