--- a/Vegas2/css/style.css
+++ b/Vegas2/css/style.css
@@ -4,25 +4,34 @@ body {
 }
 .mvInner {
   position: relative;
-  color: #f5f5f5;
   height: 100vh;
-  text-shadow: #000 1px 1px 10px;
 }
 
 .mvTitle {
   position: absolute;
-  font-size: 3rem;
+  font-size: 3.1rem;
   top: 50px;
   left: 50px;
+  color: #d36816e9;
+  text-shadow: #333 1px 1px 20px;
 }
 .mvText {
+  color: #dcf536ef;
+  text-shadow: #333 1px 1px 20px;
   position: absolute;
   font-size: 2.5rem;
   top: 100px;
   left: 50px;
 }
+.mvMesses {
+  color: #ffffff70;
+  text-shadow: #333 1px 1px 10px;
+  position: absolute;
+  font-size: 1.3rem;
+  bottom: 10%;
+  right: 2%;
+}
 
 .vegas-slide {
   object-fit: cover;
 }
-
