--- a/Vegas2/css/style.css
+++ b/Vegas2/css/style.css
@@ -9,26 +9,29 @@ body {
 
 .mvTitle {
   position: absolute;
-  font-size: 3.1rem;
-  top: 50px;
-  left: 50px;
-  color: #d36816e9;
-  text-shadow: #333 1px 1px 20px;
+  font-size: 2.5rem;
+  top: 30px;
+  left: 20px;
+  color: #ff7c17bd;
+  text-shadow: #333 0px 0px 10px;
 }
 .mvText {
-  color: #dcf536ef;
-  text-shadow: #333 1px 1px 20px;
+  color: #e2ff23b1;
+  text-shadow: #333 0px 0px 10px;
+  text-decoration: underline;
+  text-underline-offset: 12px;
   position: absolute;
-  font-size: 2.5rem;
-  top: 100px;
-  left: 50px;
+  font-size: 3rem;
+  top: 80px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .mvMesses {
   color: #ffffff70;
   text-shadow: #333 1px 1px 10px;
   position: absolute;
   font-size: 1.3rem;
-  bottom: 10%;
+  bottom: 15%;
   right: 2%;
 }
 
